# netbox-zabbix-sync

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  config.py.example  config.yaml  docker-compose.yml  netbox-zabbix-sync.sh  netbox_zabbix_mapper.py  netbox_zabbix_sync  netbox_zabbix_sync.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/actions/: quality.yml
.github/workflows/: build-package.yml  publish-image.yml  publish-package.yml  quality.yml  reviewdog.yml  run_tests.yml  unittesting.yml
infra/: netbox-compose.yml
modules/: .device.py.swp  config.py  core.py  device.py  exceptions.py  hostgroups.py  interface.py  inventory.py  logging.py  network_map.py  tags.py  tools.py  usermacros.py  virtualMachine.py  virtual_machine.py  virtualmachine.py
netbox_zabbix_sync/: __init__.py
netbox_zabbix_sync/modules/: cli.py  core.py  device.py  exceptions.py  host.py  host_description.py  hostgroups.py  interface.py  jinja_filters.py  logging.py  settings.py  tags.py  tools.py  usermacros.py  virtual_machine.py
tests/: test_configuration_parsing.py  test_core.py  test_device_deletion.py  test_host.py  test_host_description.py  test_hostgroups.py  test_interface.py  test_list_hostgroup_formats.py  test_physical_device.py  test_tags.py  test_tools.py  test_usermacros.py  test_virtual_machine.py
